# obs-midi

./: .gitmodules  CMakeLists.txt
src/: Config.cpp  Config.hpp  DeviceManager.cpp  DeviceManager.h  Device_Manager.cpp  Device_Manager.hpp  OBSMIDI.cpp  OBSMIDI.hpp  Utils.cpp  Utils.hpp  config.h  config.hpp  device-manager.cpp  device-manager.h  events.cpp  events.h  midi-agent.cpp  midi-agent.h  obs-controller.cpp  obs-midi.cpp  obs-midi.h  plugin-main.cpp  plugin-main.hpp  utils.h  version.h
src/forms/: obs-midi-resources.qrc  plugin-window.cpp  plugin-window.hpp  plugin-window.ui
src/rpc/: RpcEvent.cpp  RpcEvent.h
